# curiosity

./: Cargo.toml  README.md  log.txt
gemtext/: Cargo.toml
gemtext/src/: lib.rs
src/: main.rs
